<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<Button android:id="@+id/btnViewTableDetail" android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:text="@string/btn_view_table_detail" />
<!-- 
<Button android:id="@+id/btnPrintPreview"  android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:text="打印预览" />
     -->
<Button android:id="@+id/btnAddChildTable"  android:layout_width="fill_parent" android:layout_height="wrap_content"
     android:text="@string/btn_add_child_table" />
<Button android:id="@+id/btnDeleteTable"  android:layout_width="fill_parent" android:layout_height="wrap_content"
     android:text="@string/btn_delete_table" />"
<Button android:id="@+id/btnExit"  android:layout_width="fill_parent" android:layout_height="wrap_content"
     android:text="@string/btn_exit" />
</LinearLayout>