<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
   > 
    <!--  android:layout_weight="1"-->
    
    
    <ScrollView android:id="@+id/ScrollView01"
		android:layout_width="fill_parent"
		 android:layout_height="0dip" 
		 android:layout_weight="1"       
		>
     <LinearLayout
         android:orientation="vertical" 
         android:id="@+id/MenusContainer"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         />
	</ScrollView>	
	 
      
    <LinearLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginLeft="10dp">
         <!--  
     <Button
         android:id="@+id/btnExit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="返回" />
        
     <TextView android:layout_width="100dp" android:layout_height="wrap_content"         />
     
     <Button
	         android:id="@+id/btnSave"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"		               
	         android:text="保存并返回" />
 		-->
  
	<EditText
         android:id="@+id/editTextInput"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/input_menu_keywords"
         android:layout_weight="1" android:inputType="number">
     </EditText>
  	<Button
         android:id="@+id/btnCloseKeyboard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btn_close_keyboard" />
  	</LinearLayout>
    
     <LinearLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginLeft="10dp">
  	<!-- 
     <Button
         android:id="@+id/btnAllMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="全部菜单" />
            <Button
	         android:id="@+id/btnMenuBar"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"		               
	         android:text="酒水" />
     -->
     <Button
	         android:id="@+id/btnGoHome"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"		               
	         android:text="@string/btn_go_home"></Button> 
	<Button
	         android:id="@+id/btnCurrentOrders"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"	
	         android:layout_marginLeft="15dp"	                       
	         android:text="@string/btn_view_current_orders"/>
	
      <Button
	         android:id="@+id/btnMenuGroup"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"	
	         android:layout_marginLeft="15dp"	               
	         android:text="@string/btn_view_groups"/>    
      
         <Button
	         android:id="@+id/btnPrint"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"	
	          android:layout_marginLeft="15dp"		               
	         android:text="@string/btn_print" />
            <TextView
	             android:layout_width="0dp"
	             android:layout_height="wrap_content"
	             android:layout_weight="1" >
			</TextView>
         <Button
	         android:id="@+id/btnExtra"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"		               
	         android:text="@string/btn_extra" />        
      </LinearLayout>
</LinearLayout>