<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
   > 
    <!--  android:layout_weight="1"-->
    
    
    <ScrollView android:id="@+id/ScrollView01"
		android:layout_width="fill_parent"
		 android:layout_height="0dip" 
		 android:layout_weight="1"       
		>
     <LinearLayout
         android:orientation="vertical" 
         android:id="@+id/MenusContainer"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         />
	</ScrollView>	
     <LinearLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:orientation="horizontal">

         <Button
             android:id="@+id/btnGoBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn_go_back"    >
         </Button>
         <TextView
             android:layout_height="wrap_content"
             android:layout_width="0dip"
             android:layout_weight="1"
             >
         </TextView>
         <Button
         android:id="@+id/btnConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btn_save"    >    
         </Button>  

         <TextView             
             android:layout_height="wrap_content"
             android:layout_width="0dip"
             android:layout_weight="1"
             >
		</TextView>
          <Button
         android:id="@+id/btnAddNewMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btn_add_new_menu"    >    
         </Button>  
          <Button
         android:id="@+id/btnAddNewGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btn_add_new_group"    >    
         </Button>  
      </LinearLayout>
</LinearLayout>