  <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tableLayout1"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
      android:layout_marginLeft="10dp"
      >
        <TableRow style="TableDetailTableRow" >
            <TextView android:text="号码" style="@style/TableDetailTextView"   />   
            <EditText android:id="@+id/txtMenuNr" android:layout_width="0dp" android:layout_weight="1"></EditText>        </TableRow>
            
             <TableRow style="TableDetailTableRow" >
            <TextView android:text="菜名" style="@style/TableDetailTextView"   />   
            <EditText android:id="@+id/txtMenuName" android:layout_width="0dp" android:layout_weight="1"></EditText>        </TableRow>
            
         <TableRow style="TableDetailTableRow" >
            <TextView android:text="中文名" style="@style/TableDetailTextView"   />   
            <EditText android:id="@+id/txtMenuNameChinese" android:layout_width="0dp" android:layout_weight="1"></EditText>        </TableRow>
            
          <TableRow  style="TableDetailTableRow" >
            <TextView android:text="价格" style="@style/TableDetailTextView"   />   
            <EditText android:id="@+id/txtMenuPrice" android:layout_width="0dp" android:layout_weight="1"></EditText>   </TableRow>

      <TableRow  style="TableDetailTableRow" >
      <TextView android:text="外卖价格" style="@style/TableDetailTextView"   />
      <EditText android:id="@+id/txtMenuPriceTakeAway" android:layout_width="0dp" android:layout_weight="1"></EditText></TableRow>

      <TableRow style="TableDetailTableRow" >
            <TextView android:text="税率" style="@style/TableDetailTextView"   />   
            <EditText android:id="@+id/txtMenuTax" android:layout_width="0dp" android:layout_weight="1"></EditText>        </TableRow>

      <TableRow  style="TableDetailTableRow" >
          <TextView android:text="打印" style="@style/TableDetailTextView"   />
          <CheckBox android:id="@+id/cbxPrint" android:layout_width="0dp" android:layout_weight="1"></CheckBox>        </TableRow>

            <TableRow  style="TableDetailTableRow" >
            <TextView android:text="打印酒吧" style="@style/TableDetailTextView"   />  
            <CheckBox android:id="@+id/cbxPrintToBar" android:layout_width="0dp" android:layout_weight="1"></CheckBox>
                <TextView android:text="打印厨房" style="@style/TableDetailTextView"   />
                <CheckBox android:id="@+id/cbxPrintToKitchen" android:layout_width="0dp" android:layout_weight="1"></CheckBox>
            </TableRow>
            
            <TableRow  style="TableDetailTableRow" >
                  </TableRow>
            
             <TableRow style="TableDetailTableRow" >
            <TextView android:text="组别" style="@style/TableDetailTextView"   />  
            <Spinner android:id="@+id/ddbMenugroup" android:layout_width="fill_parent" ></Spinner>        </TableRow>
            
         <TableRow android:layout_height="80dip" android:layout_marginTop="30dip">
            <Button android:id="@+id/btnCancel"  android:layout_width="80dip" android:text="@string/btn_go_back"></Button>
             <Button android:id="@+id/btnSave" android:layout_width="80dip" android:text="@string/btn_save"></Button>
             <Button android:id="@+id/btnDelete"  android:layout_width="80dip" android:text="@string/btn_delete"></Button>
           
                </TableRow>
</TableLayout>